# evm-crosschain-arbitrage-dashboard-be

./: .gitignore  API_EXAMPLES.md  API_SPECIFICATION.md  AUTHENTICATION.md  Cargo.toml  Makefile  SETUP.md
config/: config.example.toml
src/: config.rs  errors.rs  lib.rs  main.rs
src/bot/: mod.rs
src/bot/contracts/: mod.rs
src/bot/contracts/ABI/: IUniversalRouter.json  IZiSwapPool.json  IZiSwapQuoter.json
src/bot/models/path/: registry.rs
src/bot/models/pool/: base.rs  mock.rs  mod.rs  multichain_registry.rs  registry.rs
src/bot/models/profit_token/: registry.rs
src/bot/models/token/: mod.rs  registry.rs
src/bot/providers/: mod.rs  network_configurator.rs  pool_fetcher.rs  token_fetcher.rs  utils.rs
src/database/: mod.rs  mongodb.rs  mongodb_logger.rs  service.rs
src/database/models/: config.rs  mod.rs  network.rs  path.rs  pool.rs  token.rs  utils.rs
src/database/repositories/: config.rs  mod.rs  network.rs  path.rs  pool.rs  token.rs
src/handlers/: handlers.rs  mod.rs
src/handlers/config/: auth.rs  config.rs  dto.rs  mod.rs  service.rs
src/handlers/network/: dto.rs  mod.rs  network.rs  service.rs
src/handlers/path/: dto.rs  mod.rs  path.rs  service.rs
src/handlers/pool/: dto.rs  mod.rs  pool.rs  service.rs
src/handlers/token/: dto.rs  mod.rs  service.rs  token.rs
src/routes/: config.rs  mod.rs  network.rs  path.rs  pool.rs  routes.rs  token.rs
src/services/: mod.rs  notification_handler.rs
src/services/indexers/: indexer.rs  mod.rs  pool_indexer.rs  simple_indexer.rs
src/test/: test_notification.rs
(+7 files in other folders)
